# subproc-safe-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
subproc_safe/: __init__.py  _cache.py  _core.py  _gpu.py  _leak_report.py
tests/: test_cache.py  test_edge_cases.py  test_gpu_fallback.py  test_leak_report.py  test_run.py  test_single_flight.py  test_windows_hide.py
